# knowrob_refills

./: CMakeLists.txt  README.md  build.gradle  package.xml  setup.py
launch/: knowrob_refills.launch  knowrob_refills_test.launch  map.launch
owl/: IIWA_Robot.owl  dm-market-iai.owl  dm-market.owl  dm-products.owl  iai-shop.owl  kmr_iiwa_with_odom_robot.owl  product-catalog.owl  product-taxonomy.owl  shop-test.owl  shop.owl
prolog/: init.pl  refills.pl  refills.plt  shop.pl  shop.plt
scripts/: class_mapping.py  class_mapping_products.py  export_neem_as_urdf.py  gen-taxonomy.py  import_catalog.py  label_mapping.py  start_knowrob_with_beliefstate.py  subclass_mapping.py  update_catalog.sh
settings/: default.pl
src/: __init__.pl  refills.pl  refills.plt  shop.pl  shop.plt  unreal_shop.py
src/knowrob_refills/: knowrob_wrapper.py
urdf/: dm_shelves.urdf
